# la_peche_NILE_LEPRECHAUNS

./: .gitignore  README (2).md  README.md  dev.py  pyproject.toml  pytest.ini  pytest.ini.backup
app/: README.md  app.py  main.py
app/components/: README.md  __init__.py  state.py
app/pages/: 10_Alertes_Anomalies.py  11_Diagnostic.py  12_Carte_Categories.py  1_Dashboard.py  2_Operations.py  3_Schema.py  4_Audit.py  5_Catalogue.py  6_KPI_Securite.py  7_Performance_CROSS.py  8_Analyse_Flotteurs.py  9_Saisonnalite_Meteo.py
config/: README.md  config.yml  config_clean.yml
doc/: validation.md
docs/: INDEX.md  KPI_DOCUMENTATION.md  KPI_POWERBI_DECIDEURS.md  PERFORMANCE_OPTIMIZATION.md  PROMPT_CONTINUATION_PERFORMANCE.md
exports/: powerbi_data.py
notebook/: exploration.ipynb
sql/: README.md  check_indexes.sql  clean_tables.sql  optimize_performance.sql  refresh_materialized_views.sql  stub_tables.sql  views_kpi.sql
src/: README.md  __init__.py  config.py  helpers.py  main.py
src/analytics/: README.md  __init__.py
src/auth/: README.md  __init__.py  authentificator.py  management.py
src/database/: README.md  __init__.py  audit.py  base_queries.py  connection.py  crud.py  enums.py  kpi_queries.py  models.py  raw_queries.py
src/etl/: README.md  __init__.py  extract.py  load.py  pipelines.py
src/schema/: README.md  __init__.py  definitions.py  dialog_generator.py  form_generator.py  list_generator.py  secmar_descriptions.py
src/utils/: README.md  __init__.py  dataframe_filters.py  performance.py  warmload.py
src/validation/: README.md  __init__.py  base.py  integration.py  schema_validation.py  validators.py
test/: README.md  __init__.py  test_base.py  test_extract.py  test_integration.py  test_load.py  test_pipelines.py  test_schema_validation.py  test_transform.py  test_utils.py  test_validators.py
(+18 files in other folders)
