[project]
name = "la-peche-nile-leprechauns"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.3.3",
    "pandera>=0.28.1",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.45",
    "cachetools>=6.2.4",
    "plotly>=5.18.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "streamlit>=1.40.0",
    "streamlit-mermaid>=0.3.0",
    "bcrypt>=4.2.0",
    "streamlit-authenticator>=0.3.0",
    "folium>=0.20.0",
    "streamlit-folium>=0.26.1",
]
[tool.setuptools]
packages = []
